# rod

./: Cargo.toml  README.md
.github/workflows/: rust.yml
rod_derive/: Cargo.toml  README.md
rod_derive/src/: lib.rs  statics.rs
rod_derive/src/types/: boolean.rs  custom.rs  float.rs  integer.rs  iterable.rs  literal.rs  mod.rs  option.rs  skip.rs  string.rs  tuple.rs
src/: lib.rs  prelude.rs  tests.rs
src/errors/: float.rs  integer.rs  iterable.rs  literal.rs  mod.rs  option.rs  string.rs
src/tests/: basic.rs
