[package]
name = "rod_validation"
version = "0.2.2"
edition = "2024"
authors = ["kommade"]
description = "A lightweight and ergonomic validation library for Rust"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/kommade/rod"
keywords = ["validation", "forms", "data-validation", "serde", "derive"]
categories = ["development-tools", "parsing"]

[dependencies]
regex = { version = "1.11.2", optional = true }
rod_derive = { path = "./rod_derive", version = "0.2.3" }

[features]
default = ["regex"]
regex = ["dep:regex", "rod_derive/regex"]


