[package]
name = "rod_derive"
version = "0.2.0"
edition = "2024"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["derive", "extra-traits", "parsing", "full"] }

[features]
default = []
regex = []
