[package]
name = "rod_derive"
version = "0.2.0"
edition = "2024"
authors = ["kommade"]
description = "Procedural macro for the Rod validation library"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/kommade/rod/tree/master/rod_derive"
keywords = ["validation", "proc-macro", "derive", "rod"]
categories = ["development-tools", "parsing", "code-generation"]
workspace = ".."

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["derive", "extra-traits", "parsing", "full"] }

[features]
default = []
regex = []
